syntax = "proto3";
package phe;
option go_package="../phe";

service phe_workflow{
    rpc Setup (SetupC) returns (SetupS) {}
    rpc Enrollment (EnrollmentC) returns (EnrollmentS) {}
    rpc Validation (ValidationC) returns (ValidationS) {}
    rpc Rotation (RotationC) returns (RotationS) {}
}

message SetupC {
    bytes flag = 1;
}

message SetupS {
    bytes h = 1;
    bytes z = 2;
}

message EnrollmentC {
    bytes un = 1;
}

message EnrollmentS {
    bytes hs = 1;
    bytes ns = 2;
}

message ValidationC {
    bytes c1 = 1;
    bytes c2 = 2;
    bytes c3 = 3;
}

message ValidationS {
    bool flag = 1;
}

message RotationC {
    bytes flag = 1;
}

message RotationS {
    bytes alpha = 1;
    bytes beta = 2;
    bytes gamma = 3;
    bytes zeta = 4;
}